[package]
name = "vulkano"
version = "0.1.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
repository = "https://github.com/tomaka/vulkano"
description = "Safe wrapper for the Vulkan graphics API"
license = "MIT/Apache-2.0"
documentation = "http://tomaka.github.io/vulkano/vulkano/index.html"

[features]
use_glfw = ["glfw", "libc"]

[dependencies]
crossbeam = "0.2.5"
fnv = "1.0.2"
shared_library = "0.1.4"
smallvec = "0.1.7"
lazy_static = "0.1.15"
vk-sys = { version = "0.1.0", path = "../vk-sys" }

[dependencies.glfw]
version = "0.6.0"
path = "../../glfw-rs"
optional = true
features = ["vulkan"]
default-features = false

[dependencies.libc]
version = "0.2"
optional = true
